[package]
name = "onefmt-biome"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
panic = "abort"

[dependencies]
biome_service = { git = "https://github.com/biomejs/biome/", branch = "main", portion = "crates/biome_service" }
biome_fs = { git = "https://github.com/biomejs/biome/", branch = "main", portion = "crates/biome_fs" }
biome_configuration = { git = "https://github.com/biomejs/biome/", branch = "main", portion = "crates/biome_configuration" }
serde_json = "1.0.127"
onefmt-plugin-utils = { git = "https://github.com/nahco314/onefmt-plugin-utils", version = "0.1.0" }
anyhow = "1.0.86"
