[package]
name = "foro-biome"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
biome_configuration = { git = "https://github.com/biomejs/biome/", tag = "@biomejs/biome@2.0.0" }
biome_fs = { git = "https://github.com/biomejs/biome/", tag = "@biomejs/biome@2.0.0" }
biome_resolver = { git = "https://github.com/biomejs/biome/", tag = "@biomejs/biome@2.0.0" }
biome_service = { git = "https://github.com/biomejs/biome/", tag = "@biomejs/biome@2.0.0" }
camino = "1.1.9"
foro-plugin-utils = { version = "0.2.0", git = "https://github.com/foro-fmt/foro-plugin-utils" }
serde_json = "1.0.127"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
panic = "abort"
